--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <!-- start Navigation -->
 <script type="text/javascript" src="js/menu.js"></script>
 <link rel="stylesheet" href="css/menu.css" type="text/css" media="all" />
-<!-- end Navigation -->
+<!-- end bharath Navigation -->
 
 <!--start move objects -->
 <script type="text/javascript" src="js/move.bjects.js"></script>
