new class again added

--- a/login.html
+++ b/login.html
@@ -73,6 +73,7 @@ $(function(){
 </script>
 <!--end slideshow-->
 </head>
+<body newclass="bharathnewclass">
 <body class="bharathclass">
 <body class="actonline">
 <div id="main">
