--- a/detail.html
+++ b/detail.html
@@ -60,6 +60,7 @@ $(function(){
 
 <body class="actonline">
 <div id="main">
+<body sai ="newclass">
 	<div id="mayCart"><span><strong>Welcome</strong> : Rohit Dubariya</span><a href="order-list.html">My Order</a>   |<a href="login.html">Login</a>   | <a href="register.html">Sign Up</a><a href="shoppingbag.html"><img src="images/mycart.png" alt="Shopping Bag" border="0" />(2)</a></div>
 	<div id="navigation"><img src="images/nevi-left-corner.png" class="leftCorner" alt="corner" border="0" />
     	<ul id="topnav">                      
