--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
 </script>
 <!--end slideshow-->
 </head>
-
+</head2>
 <body class="actcontact">
 <div id="main">
 	<div id="mayCart"><span><strong>Welcome</strong> : Rohit Dubariya</span><a href="order-list.html">My Order</a>   |<a href="login.html">Login</a>   | <a href="register.html">Sign Up</a><a href="shoppingbag.html"><img src="images/mycart.png" alt="Shopping Bag" border="0" />(2)</a></div>
