changes added headedsai2

--- a/register.html
+++ b/register.html
@@ -53,6 +53,7 @@
 <!--end slideshow-->
 </head>
 
+</headedsai2added>
 <body class="actonline">
 <div id="main">
 	<div id="mayCart"><span><strong>Welcome</strong> : Rohit Dubariya</span><a href="order-list.html">My Order</a>   |<a href="login.html">Login</a>   | <a href="register.html">Sign Up</a><a href="shoppingbag.html"><img src="images/mycart.png" alt="Shopping Bag" border="0" />(2)</a></div>
